--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     ]
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.11",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.5.2",
     "@typescript-eslint/eslint-plugin": "^8.4.0",
     "@typescript-eslint/parser": "^8.4.0",
+    "drizzle-kit": "^0.24.2",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -41,7 +43,9 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "better-sqlite3": "^11.2.1",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.33.0",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "pino": "^9.4.0",
