--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,9 +23,9 @@
     "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
-      "@/": ["./src/*"]
+      "@/*": ["./src/*"]
     }
   },
   "exclude": ["node_modules"],
-  "include": ["./src/**/*.ts"]
+  "include": ["./src/**/*.ts", "drizzle.config.ts"]
 }
