--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.11",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/node": "^22.5.2",
     "@typescript-eslint/eslint-plugin": "^8.4.0",
     "@typescript-eslint/parser": "^8.4.0",
@@ -47,10 +48,13 @@
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
     "better-sqlite3": "^11.2.1",
+    "connect-redis": "^7.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
+    "express-session": "^1.18.0",
+    "ioredis": "^5.4.1",
     "pino": "^9.4.0",
     "pino-http": "^10.3.0",
     "pino-pretty": "^11.2.2",
