--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     ]
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/better-sqlite3": "^7.6.11",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
@@ -48,6 +49,7 @@
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
+    "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.2.1",
     "connect-redis": "^7.1.1",
     "dotenv": "^16.4.5",
